# ParallelRayTracer

./: CMakeLists.txt  USER GUIDE.txt
slides/: Raytracer1.pptx  Raytracer2.pptx  Raytracer3.pptx  Raytracer4.pptx  Raytracer5.pptx  Raytracer6.pptx  RaytracerOverview.pptx
src/prt/: Camera.cpp  Camera.h  Material.cpp  Material.h  Object.cpp  Object.h  ObjectList.cpp  ObjectList.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Sphere.cpp  Sphere.h  main.cpp
